--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,11 @@
     />
     <meta http-equiv="Content-Security-Policy" script-src="unsafe-inline" ; />
     <link rel="icon" type="image/png" href="./memories.png" />
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Memories</title>
   </head>
   <body>
