--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,8 +21,11 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel = "icon" href = 
+"./books.svg" 
+        type = "image/x-icon">
 
-    <title>Sharma-Ji</title>
+    <title>Sharma-Ji-ka-BetaW</title>
   </head>
   <body>
     <div id="root"></div>
