--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <meta http-equiv="Content-Security-Policy" script-src="unsafe-inline" ; />
-    <link rel="icon" type="image/png" href="./memories.png" />
+    <!-- <link rel="icon" type="image/png" href="./memories.png" /> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700&display=swap"
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     />
     <link rel = "icon" href = 
-"./books.svg" 
+"./superman.png" 
         type = "image/x-icon">
         <style>
           @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Zilla+Slab:ital,wght@1,700&display=swap');
