--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,17 +21,19 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel = "icon" href = 
-"./superman.png" 
-        type = "image/x-icon">
-        <style>
-          @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Zilla+Slab:ital,wght@1,700&display=swap');
-          </style>
-          
+    <link rel="icon" href="./superman.png" type="image/x-icon" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Zilla+Slab:ital,wght@1,700&display=swap");
+    </style>
+
     <title>Sharma-Ji-ka-BetaW</title>
   </head>
   <body>
-    <div style="font-family: 'Baloo Bhaina 2', cursive!important;" id="root"></div>
+    <div
+      style="font-family: 'Baloo Bhaina 2', cursive !important"
+      id="root"
+    ></div>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
